tests/neg/poly-fun.stk
fun foo[T <: {a: Int}](x: T): T = x.a  // error

fun bar[T](x: T): T = 3 // error

val a = foo 10  // error // error

val b = foo[{b: Int}] {b = 10} // error
